# onnxruntime

./: .gitignore  build_cuda.sh
cmake/: CMakeLists.txt  deps.txt  deps.txt_list.txt  onnxruntime.cmake  onnxruntime_inference.cmake
include/onnxruntime/core/inference/: infer_c_api.h
include/onnxruntime/core/session/: onnxruntime_c_api.h
onnxruntime/core/framework/: session_state.cc  session_state.h  session_state_utils.cc  session_state_utils.h
onnxruntime/core/inference/: abi_net_options.cc  abi_net_options_impl.h  infer_api.cc
onnxruntime/core/providers/cpu/: symbols.txt
onnxruntime/core/providers/cuda/: cuda_execution_provider.cc
onnxruntime/core/session/: inference_session.cc  inference_session.h
samples/fns_candy_style_transfer/: CMakeLists.txt  fns_candy_style_transfer.c
samples/fns_candy_style_transfer_cxx/: CMakeLists.txt  fns_candy_style_transfer.cc  gen_onnx.py
samples/fns_candy_style_transfer_infer/: CMakeLists.txt  fns_candy_style_transfer.cc  image_file_wic.cc
samples/fns_candy_style_transfer_iobinding/: CMakeLists.txt  fns_candy_style_transfer.cc
tools/ci_build/: download_deps.py  gen_def.py
